@@ -1,0 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST birdie-0.3.tar.gz 190516 SHA256 0bbb5007d41299538337cbd229a03f1662d9d2fb0995d2cf0e96083507c1d0f8 SHA512 024d91215469a70ea6bf206a328b6b72577621067a87f753de231ae3f2e5bf32dd1c6c05d15ba10b554bdae0a046ff83dce4993eb3eae2a46ce695e74cca268e WHIRLPOOL 78ac4ad50eda248eddea5af4cb4af28e1a9d42001f363af0943672a0706e2570b545a1cd6561d26c3f2d4d5e0e9d313cde5820910a3681630fbb3b01d684f342
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.20 (GNU/Linux)
+
+iF4EAREIAAYFAlH1peEACgkQknrdDGLu8JAd3wD+MfzyIsuT+QCiQ7QQCJJIo9cH
+nyg33CQ3XJmzYPN6NtUA/AzTyn5FgbA6LTiCWU0rsWAY0BbxSIwPBYJOKBHwK+ER
+=cRew
+-----END PGP SIGNATURE-----
