@@ -5,5 +5,8 @@
 <email>xmw@gentoo.org</email>
 <name>Michael Weber</name>
 </maintainer>
+<use>
+	<flag name="granite">Build against dev-libs/granite</flag>
+</use>
 </pkgmetadata>
 
